# Documentation/swagger/swagger.yaml
@@ -771,7 +771,7 @@ paths:
           schema:
             $ref: '#/definitions/dto.ErrorResponse'
         "409":
-          description: Account inactive or has transactions
+          description: Account inactive or has active transactions
           schema:
             $ref: '#/definitions/dto.ErrorResponse'
         "500":
@@ -1257,6 +1257,10 @@ paths:
             $ref: '#/definitions/dto.ErrorResponse'
         "404":
           description: Category not found or already active
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "409":
+          description: An active category with the same name already exists (ALREADY_EXISTS)
           schema:
             $ref: '#/definitions/dto.ErrorResponse'
         "500":
